# agent-lens

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  content-creator-workflow.py  pyproject.toml
agent_lens/: __init__.py  __main__.py  cli.py  display.py  export.py  pricing.py  storage.py  tracker.py
agent_lens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: bounty-tracker.md
tests/: test_tracker.py
