[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lens"
version = "0.1.0"
description = "AI Agent 追踪和成本优化 CLI 工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "lrg913427-dot"},
]
keywords = ["ai", "agent", "llm", "observability", "cost", "tracking", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
agent-lens = "agent_lens.cli:cli"

[project.urls]
Homepage = "https://github.com/lrg913427-dot/agent-lens"

[tool.setuptools.packages.find]
include = ["agent_lens*"]
